Rename switch to switchObj in Port entity
switch is a reserved keyword in TypeScript, this caused issues
